--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    
+    <header class="header">
+        <a href="index.html">
+            <img class="header__logo" src="img/logo.png" alt="Logotipo">
+        </a>
+    </header>
+
+    <nav class="navegacion">
+        <a class="navegacion__enlace navegacion__enlace--activo" href="#">Tienda</a>
+        <a class="navegacion__enlace" href="#">Nosotros</a>
+    </nav>
+
+    <footer class="footer">
+        <p class="footer__texto">Todos los derechos reservados 2022</p>
+    </footer>
 </body>
 </html>
