--- a/producto.html
+++ b/producto.html
@@ -24,7 +24,9 @@
     </nav>
 
     <main class="contenedor">
-        <h1>Nuestros productos</h1>
+        <h1>Producto
+
+        </h1>
     </main>
 
     <footer class="footer">
