--- a/nosotros.html
+++ b/nosotros.html
@@ -24,8 +24,44 @@
     </nav>
 
     <main class="contenedor">
-        <h1>Nosotros</h1>
+        <h1>Sobre Nosotros</h1>
+
+        <div class="nosotros">
+            <div class="nosotros__contenido">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam cupiditate labore corrupti, aliquid provident laborum neque quis, rem molestias quas molestiae, nulla ducimus similique eius. Quae blanditiis saepe ratione aperiam. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat nesciunt dolores ipsa sequi commodi mollitia nulla eligendi,.
+                </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis natus recusandae itaque aperiam, animi corporis rerum sunt, dolores, dignissimos magnam cupiditate. Molestiae deserunt atque porro optio vero reprehenderit neque at? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos, laboriosam harum dolore velit quidem distinctio laborum ipsum exercitationem, similique obcaecati iure ratione voluptates?.
+                </p>
+            </div>
+            <img src="img/nosotros.jpg" alt="imagen nosotros" class="nosotros__imagen">
+        </div>
     </main>
+
+    <section class="contenedor comprar">
+        <h2 class="comprar__titulo">¿Porque comprar con nosostros?</h2>
+        <div class="bloques">
+            <div class="bloque">
+                <img src="img/icono_1.png" alt="porque comprar" class="bloque__imagen">
+                <h3 class="bloque__titulo">El mejor precio</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo molestias in corrupti neque, reprehenderit maiores quaerat.</p>
+            </div><!--bloque-->
+            <div class="bloque">
+                <img src="img/icono_2.png" alt="porque comprar" class="bloque__imagen">
+                <h3 class="bloque__titulo">Para desarrolladores</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo molestias in corrupti neque, reprehenderit maiores quaerat.</p>
+            </div><!--bloque-->
+            <div class="bloque">
+                <img src="img/icono_3.png" alt="porque comprar" class="bloque__imagen">
+                <h3 class="bloque__titulo">Envio gratis</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo molestias in corrupti neque, reprehenderit maiores quaerat.</p>
+            </div><!--bloque-->
+            <div class="bloque">
+                <img src="img/icono_4.png" alt="porque comprar" class="bloque__imagen">
+                <h3 class="bloque__titulo">La mejor calidad</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo molestias in corrupti neque, reprehenderit maiores quaerat.</p>
+            </div><!--bloque-->
+        </div><!--bloques-->
+    </section>
 
     <footer class="footer">
         <p class="footer__texto">Front End Store - Todos los derechos reservados 2022</p>
