Finalización del proyecto con la página 'producto' elaborada

--- a/producto.html
+++ b/producto.html
@@ -24,9 +24,23 @@
     </nav>
 
     <main class="contenedor">
-        <h1>Producto
-
-        </h1>
+        <h1>React JS</h1>
+        <div class="camisa">
+            <img src="img/3.jpg" alt="imagen del producto" class="camisa__imagen">
+            <div class="camisa__contenido">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores voluptatibus commodi natus sit. Odit aut quibusdam unde perspiciatis magni at doloribus perferendis, ad atque nostrum accusamus rem quo pariatur recusandae!</p>
+                <form action="" class="formulario">
+                    <select class="formulario__campo">
+                        <option disabled selected>--Seleccionar Talla--</option>
+                        <option >Chica</option>
+                        <option >Mediana</option>
+                        <option >Grande</option>
+                    </select>
+                    <input class="formulario__campo" type="number" placeholder="Cantidad" min="1">
+                    <input class="formulario__submit" type="submit" value="Agregar al carrito">
+                </form>
+            </div>
+        </div>
     </main>
 
     <footer class="footer">
